--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table {
+	border-collapse:collapse;
+}
+td {
+	padding :12px;
+}
+.even {
+	background-color:#DAE0E6;
+
+}
