--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,7 @@
 <h1> searching for <%=@search_term%> </h1>
+<% if @courses.nil? %>
+<p> Sorry no courses found... </p>
+<% else %>
 <table border="1">
 	<tr>
 		<th>Images</th>
@@ -13,3 +16,4 @@
    </tr>
    <%end%>
 </table>
+<%end%>
